samples/_failures_safe/1761339250_f36a3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5796ffc0.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_5796ffc0.c:157:9: error: expected expression at end of input
  157 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_5796ffc0.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5796ffc0.c:157:9: error: expected declaration or statement at end of input
